--- a/Dockerfile-loraserver
+++ b/Dockerfile-loraserver
@@ -25,6 +25,6 @@ RUN go get github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway
 # make loraserver
 RUN mkdir -p $PROJECT_PATH
 WORKDIR $PROJECT_PATH
-RUN git clone https://github.com/brocaar/loraserver.git
+RUN git clone https://github.com/brocaar/loraserver/tree/0.12.4
 WORKDIR $PROJECT_PATH/loraserver
 RUN make build
